# wodify-auto-accept

./: .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt
src/: app.py
