[tool.poetry]
name = "wodify-auto-accept"
version = "0.1.0"
description = "Script for auto accepting spaces in classes that have been waitlisted on wodify"
authors = ["William Norris"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
bs4 = "^0.0.1"
cachetools = "^5.3.1"
certifi = "^2023.7.22"
charset-normalizer = "^3.2.0"
idna = "^3.4"
oauthlib = "^3.2.2"
protobuf = "^4.24.3"
pyasn1 = "^0.5.0"
pyasn1-modules = "^0.3.0"
pyparsing = "^3.1.1"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
rsa = "^4.9"
six = "^1.16.0"
soupsieve = "^2.5"
uritemplate = "^4.1.1"
google-token-auth = {git = "https://github.com/will-norris/google_api_auth", branch = "master"}
google-api-core = "2.11.0"
google-api-python-client = "^2.100.0"
googleapis-common-protos = "^1.60.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
